<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_cart">Cart</string>
    <string name="action_login">Login</string>
    <string name="guestUser">GUEST USER</string>
    <string name="logOut">LOGOUT</string>
    <string name="SHOP_BY_CATEGORY">Shop by Category</string>
    <string name="search">Search</string>
    <string name="search_alert"><font size="10">Search by keyword or part number</font></string>
    <string name="permission_location_rationale">We require access to your location to find the closest branch</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="imageselect">ImageSelect</string>
    <string name="send">Send</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="message">Message</string>
    <string name="add_to_cart">ADD TO CART</string>
</resources>
